--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,4 +1,14 @@
-# Dockerfile.nginx
-FROM nginx:latest
+# Dockerfile
+FROM nginx:alpine
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Copy the Nginx config file into the container
+COPY nginx.conf /etc/nginx/nginx.conf
+
+# Copy your application files if needed
+# COPY . /usr/share/nginx/html
+
+# Expose port 80
+EXPOSE 80
+
+# Start Nginx
+CMD ["nginx", "-g", "daemon off;"]
