--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,19 @@
 # nginx.conf
-
-events {}
+events {
+    worker_connections 1024;
+}
 
 http {
     server {
         listen 80;
-        server_name 178.128.198.151;  # Replace with your domain
+        server_name 178.128.198.151; # Adjust this based on your domain name
 
         location / {
-            proxy_pass http://178.128.198.151:8000/;  # Assuming FastAPI runs on port 8000
+            proxy_pass http://178.128.198.151:8000/; # Adjust this based on your backend service
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
