--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-# nginx.conf
+ # nginx.conf
 events {
     worker_connections 1024;
 }
@@ -6,10 +6,10 @@ events {
 http {
     server {
         listen 80;
-        server_name 178.128.198.151; # Adjust this based on your domain name
+        server_name 157.230.29.110; # Adjust this based on your domain name
 
         location / {
-            proxy_pass http://178.128.198.151:8000/; # Adjust this based on your backend service
+            proxy_pass http://157.230.29.110:8000/; # Adjust this based on your backend service
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -17,3 +17,69 @@ http {
         }
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# events {
+#     worker_connections 1024;
+# }
+
+# http {
+#     server {
+#         listen 80;
+#         server_name 157.230.29.110; # Adjust this based on your domain name
+
+#         location / {
+#             return 301 https://$host$request_uri;
+#         }
+#     }
+
+#     server {
+#         listen 443 ssl;
+#         server_name 157.230.29.110; # Adjust this based on your domain name
+
+#         ssl_certificate /etc/ssl/certs/server.crt;
+#         ssl_certificate_key /etc/ssl/private/server.key;
+
+#         ssl_protocols TLSv1.2 TLSv1.3;
+#         ssl_ciphers HIGH:!aNULL:!MD5;
+
+#         location / {
+#             proxy_pass http://157.230.29.110:8000/; # Adjust this based on your backend service
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+#     }
+# }
