--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,5 @@
  # nginx.conf
+
 events {
     worker_connections 1024;
 }
@@ -6,7 +7,22 @@ events {
 http {
     server {
         listen 80;
-        server_name 157.230.29.110; # Adjust this based on your domain name
+        server_name souqzone.xyz; # Adjust this based on your domain name
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name souqzone.xyz; # Adjust this based on your domain name
+
+        ssl_certificate /etc/ssl/certs/server.crt;
+        ssl_certificate_key /etc/ssl/private/server.key;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
             proxy_pass http://157.230.29.110:8000/; # Adjust this based on your backend service
@@ -31,25 +47,6 @@ http {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 # events {
 #     worker_connections 1024;
 # }
@@ -57,25 +54,10 @@ http {
 # http {
 #     server {
 #         listen 80;
-#         server_name 157.230.29.110; # Adjust this based on your domain name
+#         server_name 164.90.190.221; # Adjust this based on your domain name
 
 #         location / {
-#             return 301 https://$host$request_uri;
-#         }
-#     }
-
-#     server {
-#         listen 443 ssl;
-#         server_name 157.230.29.110; # Adjust this based on your domain name
-
-#         ssl_certificate /etc/ssl/certs/server.crt;
-#         ssl_certificate_key /etc/ssl/private/server.key;
-
-#         ssl_protocols TLSv1.2 TLSv1.3;
-#         ssl_ciphers HIGH:!aNULL:!MD5;
-
-#         location / {
-#             proxy_pass http://157.230.29.110:8000/; # Adjust this based on your backend service
+#             proxy_pass http://164.90.190.221:8000/; # Adjust this based on your backend service
 #             proxy_set_header Host $host;
 #             proxy_set_header X-Real-IP $remote_addr;
 #             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
